--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.va\""
+    "\"art.vadelay@vandelay.co\"."
    ]
   },
   {
