Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vadelay@vandelay.co\".endswith(.com)"
+    "\"art.vadelay@vandelay.co\".endswith(\".com\".com)"
    ]
   },
   {
